Fix typo in about section,  shorten  lorem

--- a/the_castle.html
+++ b/the_castle.html
@@ -35,10 +35,10 @@
                                 Non nulla pariatur duis commodo ullamco nisi aute laborum sunt. Non cillum Lorem non exercitation ad proident culpa. Fugiat cillum excepteur esse sit enim incididunt irure.
                             </p>
                             <p>
-                                Nulla laborum labore irure sint aute qui deserunt laboris adipisicing. Veniam laborum ea veniam cupidatat eu anim adipisicing enim adipisicing consequat deserunt laboris ad do. Cupidatat anim non nulla esse sunt reprehenderit deserunt aute. Qui sunt culpa dolor. Lorem et magna cupidatat.
+                                Ipsum ea proident incididunt magna aliqua commodo ut sit. Labore irure nostrud culpa consectetur veniam aute ea ullamco irure nisi. Nulla id mollit veniam deserunt aliqua irure nisi qui sunt.
                             </p>
                             <p>
-                                Ipsum ea proident incididunt magna aliqua commodo ut sit. Labore irure nostrud culpa consectetur veniam aute ea ullamco irure nisi. Nulla id mollit veniam deserunt aliqua irure nisi qui sunt.
+                                Nulla laborum labore irure sint aute qui deserunt laboris adipisicing. Veniam laborum ea veniam cupidatat eu anim adipisicing enim adipisicing consequat deserunt laboris ad do. Cupidatat anim non nulla esse sunt reprehenderit deserunt aute. Qui sunt culpa dolor. Lorem et magna cupidatat.
                             </p>
                             <p>
                                 Culpa sint nulla proident in non velit veniam culpa duis sit pariatur. Incididunt excepteur officia in culpa in et amet. Occaecat laboris exercitation in culpa tempor fugiat.. Lorem esse sit et ipsum enim. Eu incididunt sit veniam pariatur dolor nulla. Do excepteur do laboris dolor officia veniam commodo duis magna. Fugiat nulla aute reprehenderit labore magna nisi.
@@ -47,7 +47,7 @@
                                 Duis culpa mollit nulla commodo voluptate quis nostrud tempor est eiusmod. Sint voluptate laboris reprehenderit et incididunt cillum. Adipisicing labore reprehenderit sunt nostrud cupidatat occaecat ullamco elit quis incididunt.
                             </p>
                             <p>
-                                Enim ea cillum irure id cillum culpa ullamco consequat duis cillum amet. Irure cillum minim consequat enim nulla elit sunt sunt. Commodo laboris fugiat eiusmod minim tempor mollit. Deserunt enim incididunt consectetur voluptate fugiat consectetur voluptate reprehenderit duis enim adipisicing irure. Tempor excepteur deserunt mollit nisi fugiat consequat. Ea quis cupidatat occaecat aliquip enim elit dolor excepteur adipisicing.
+                                Enim ea cillum irure id cillum culpa ullamco consequat duis cillum amet. Irure cillum minim consequat enim nulla elit sunt sunt. Commodo laboris fugiat eiusmod minim tempor mollit. Deserunt enim incididunt consectetur voluptate fugiat consectetur voluptate reprehenderit duis enim adipisicing irure.
                             </p>
                             <p>
                                 Aliquip anim veniam commodo consequat exercitation cupidatat. Incididunt incididunt aliquip eu dolore aute. Cupidatat deserunt laboris veniam elit quis reprehenderit quis laboris velit sint consectetur. Commodo occaecat et irure aliqua pariatur et eu.
@@ -59,7 +59,7 @@
                                 Ullamco anim ex est id irure. Ut in ad sit commodo dolor quis exercitation. In pariatur deserunt sint anim cillum consequat ipsum id consectetur nulla ut. Quis voluptate sint ad incididunt. Aute occaecat voluptate reprehenderit in non veniam eu magna irure ut voluptate tempor. Officia cillum tempor enim anim eiusmod qui.
                             </p>
                             <p>
-                                In reprehenderit tempor est fugiat ut ipsum eu labore aliquip labore dolore reprehenderit pariatur cillum. Quis consectetur nulla sit enim dolor exercitation qui aliquip exercitation ad magna sunt. Deserunt reprehenderit aute tempor deserunt. Qui velit ipsum ad pariatur eiusmod aliquip occaecat cillum. Dolor cupidatat duis cupidatat aliqua voluptate sint labore id deserunt nulla. Nulla deserunt laborum do pariatur sint ut duis occaecat occaecat ullamco duis ad qui. Fugiat nisi qui labore adipisicing eiusmod aliqua velit ullamco.
+                                In reprehenderit tempor est fugiat ut ipsum eu labore aliquip labore dolore reprehenderit pariatur cillum. Quis consectetur nulla sit enim dolor exercitation qui aliquip exercitation ad magna sunt. Deserunt reprehenderit aute tempor deserunt. Qui velit ipsum ad pariatur eiusmod aliquip occaecat cillum. Dolor cupidatat duis cupidatat aliqua voluptate sint labore id deserunt nulla.
                             </p>
                             <p>
                                 Nostrud eu laboris sint velit. Irure proident proident adipisicing elit sit anim. Ipsum eiusmod laboris adipisicing ipsum esse labore sunt magna pariatur. Et exercitation laboris qui cillum eiusmod deserunt nisi qui id reprehenderit. Labore non nisi occaecat exercitation irure quis veniam exercitation consectetur incididunt cupidatat dolore cillum. Quis eu amet dolore nostrud exercitation nulla aute sit sint ea. Consequat laborum ut eiusmod sint anim ex deserunt sunt dolor.
@@ -74,13 +74,13 @@
                                 Commodo ad exercitation non duis. Esse ea nisi proident non quis tempor officia magna eiusmod eu nulla id. Quis occaecat sit irure et sit proident pariatur officia quis id consequat ea mollit ipsum. Officia sunt est duis proident. Ullamco aliquip labore tempor do consectetur esse consequat consectetur.
                             </p>
                             <p>
-                                Ad sunt aliquip exercitation anim ipsum labore consectetur mollit mollit ea laboris consequat cillum ex. Qui adipisicing amet aliqua consectetur aliquip. Lorem dolor exercitation voluptate proident laborum. Cillum labore officia non ullamco ex dolore deserunt ipsum. Excepteur aute deserunt veniam. Lorem exercitation. Ad laborum voluptate consectetur ut nostrud. Eu occaecat esse commodo sit laboris. Lorem fugiat laborum labore duis est dolore commodo.
+                                Ad sunt aliquip exercitation anim ipsum labore consectetur mollit mollit ea laboris consequat cillum ex. Qui adipisicing amet aliqua consectetur aliquip. Lorem dolor exercitation voluptate proident laborum. Cillum labore officia non ullamco ex dolore deserunt ipsum. Excepteur aute deserunt veniam.
                             </p>
                             <p>
                                 Id labore sunt mollit do. Ut laboris amet dolor commodo tempor non ea minim mollit. Non adipisicing sunt ad anim veniam incididunt excepteur adipisicing eiusmod. Qui cillum fugiat esse enim sunt reprehenderit. Consectetur anim amet dolor esse consequat non occaecat est commodo esse do.
                             </p>
                             <p>
-                                Exercitation eu deserunt pariatur duis quis. Nostrud pariatur reprehenderit pariatur sint reprehenderit culpa incididunt eiusmod non tempor cillum aliqua anim. Aliqua qui ut duis non fugiat enim exercitation tempor sint irure. Aute. Lorem commodo magna culpa. Cupidatat ut officia ullamco laboris culpa amet. Laborum reprehenderit nulla nisi exercitation eiusmod proident enim ullamco mollit. Nostrud tempor officia ut quis proident sint eiusmod tempor quis cillum consectetur ut.
+                                Exercitation eu deserunt pariatur duis quis. Nostrud pariatur reprehenderit pariatur sint reprehenderit culpa incididunt eiusmod non tempor cillum aliqua anim. Aliqua qui ut duis non fugiat enim exercitation tempor sint irure. Aute. Lorem commodo magna culpa. Cupidatat ut officia ullamco laboris culpa amet. Laborum reprehenderit nulla nisi exercitation eiusmod proident enim ullamco mollit.
                             </p>
                             <p>
                                 Et sunt elit amet elit labore magna exercitation. Anim exercitation commodo ullamco id voluptate duis laborum aliqua. Laboris anim minim excepteur do.
@@ -105,9 +105,6 @@
                             </p>
                             <p>
                                 Amet sint fugiat esse do ullamco deserunt adipisicing officia consectetur dolor quis. Duis esse magna. Lorem ipsum enim adipisicing. Pariatur amet cupidatat laboris commodo. Lorem ea et fugiat. Ut voluptate. Lorem culpa consectetur proident officia id proident laborum nostrud laboris velit ex.
-                            </p>
-                            <p>
-                                Reprehenderit aliquip ipsum proident ex labore qui irure ut voluptate dolore. Qui qui occaecat dolore sint velit aute sunt ea cillum ipsum aliqua. Nisi ullamco voluptate excepteur incididunt laborum occaecat sit. Id enim culpa deserunt. Lorem aliquip irure do esse laborum mollit culpa pariatur. Magna proident qui sunt enim proident nostrud nisi sunt voluptate fugiat do laborum.
                             </p>
                             <hr>
                             <p class="small">
