--- a/the_tale_of_the_eye.html
+++ b/the_tale_of_the_eye.html
@@ -74,40 +74,22 @@
                                 Irure veniam sit non culpa do tempor reprehenderit. Laboris incididunt ex dolor occaecat esse id dolore qui in irure irure officia. Consectetur consequat dolor minim et. Est dolore ex aliquip sunt sit quis laboris. Commodo nulla cupidatat veniam ad do aliqua incididunt ea ad mollit ipsum dolor sit.
                             </p>
                             <p>
-                                Adipisicing minim ipsum ullamco officia fugiat reprehenderit minim enim in velit esse. Consequat dolor ex officia fugiat minim dolore esse elit proident mollit minim proident tempor. Anim aliquip labore consectetur proident. Anim labore deserunt duis duis. Laborum incididunt cupidatat ex dolor veniam velit voluptate deserunt. Cupidatat duis laborum deserunt culpa proident minim adipisicing ullamco pariatur amet consequat exercitation. Quis occaecat minim ullamco quis sit ipsum eiusmod nulla culpa culpa eu sit commodo.
-                            </p>
-                            <p>
                                 Sunt mollit dolore fugiat aliquip deserunt amet adipisicing deserunt non aliquip ex. Veniam laboris quis nulla ipsum laboris mollit est exercitation. Ut irure ut cillum exercitation cillum mollit deserunt sunt anim cupidatat quis sunt. Exercitation est occaecat. Lorem cupidatat. Labore minim ea pariatur aliquip ad enim. Lorem cillum ad voluptate. Minim proident sit duis quis do.
                             </p>
                             <p>
                                 Labore cupidatat velit in. Lorem occaecat enim excepteur veniam eiusmod. Esse ea dolore amet eiusmod anim incididunt veniam irure. Sint irure laboris eiusmod dolore culpa nisi eiusmod aute dolore ullamco dolor pariatur.
                             </p>
                             <p>
-                                Anim proident officia sint mollit culpa. Lorem dolore veniam consectetur nostrud laborum tempor fugiat. Sunt exercitation elit culpa laborum sunt nostrud ad. Sint laboris excepteur magna pariatur magna reprehenderit exercitation ea aliquip excepteur ex laboris in ad. In sint eiusmod. Lorem est laboris dolor exercitation ex sit anim ullamco.
+                                Anim proident officia sint mollit culpa. Lorem dolore veniam consectetur nostrud laborum tempor fugiat. Sunt exercitation elit culpa laborum sunt nostrud ad. Sint laboris excepteur magna pariatur magna reprehenderit exercitation ea aliquip excepteur ex laboris in ad.
                             </p>
                             <p>
                                 Nostrud adipisicing aute aute id fugiat aliquip culpa ipsum veniam eu qui veniam reprehenderit. Velit velit aliqua aliquip enim elit minim esse nulla aliqua eiusmod ut nulla. Ipsum laboris ex consectetur ut deserunt velit cillum in laboris cillum commodo.
                             </p>
                             <p>
-                                Consectetur irure cupidatat aliquip id aute. Lorem consectetur reprehenderit sit fugiat. Qui dolor do quis aliquip laboris culpa nostrud deserunt commodo ut ea. Culpa esse cillum do esse. Ullamco sint tempor ea nulla deserunt duis aliqua. Est adipisicing dolor labore duis. Exercitation laboris ut laborum anim laborum labore eu minim velit laboris ea. Nostrud laborum minim occaecat laborum sint ea eiusmod nostrud veniam voluptate aliquip.
+                                Consectetur irure cupidatat aliquip id aute. Lorem consectetur reprehenderit sit fugiat. Qui dolor do quis aliquip laboris culpa nostrud deserunt commodo ut ea. Culpa esse cillum do esse. Ullamco sint tempor ea nulla deserunt duis aliqua.
                             </p>
                             <p>
                                 Id cupidatat sit commodo velit officia duis veniam adipisicing consequat consequat anim. Fugiat aute est laborum cupidatat irure proident occaecat tempor. Proident cupidatat et laborum aliquip do tempor ipsum aliqua sunt proident. Eiusmod reprehenderit dolore elit id quis aliqua sint ea deserunt aliquip. Deserunt in aute reprehenderit proident incididunt occaecat ea.
-                            </p>
-                            <p>
-                                Irure anim ullamco pariatur anim elit. Lorem exercitation esse in. Velit sint consectetur. Lorem proident eiusmod ea irure. Dolore aliqua irure in nostrud aute amet nisi deserunt irure.
-                            </p>
-                            <p>
-                                Quis ex velit aliquip mollit velit do quis nostrud laboris laborum. Tempor aliqua consequat in eu sunt ipsum eiusmod exercitation cillum esse aliqua pariatur. Culpa dolor pariatur laborum fugiat ipsum commodo labore veniam nostrud qui. Nisi deserunt fugiat enim aute exercitation aute dolor. Sint officia sunt cupidatat enim ipsum elit mollit tempor eiusmod sit.
-                            </p>
-                            <p>
-                                Eu. Lorem anim adipisicing mollit do. Ad magna do non ea exercitation sunt laborum. Excepteur nulla magna in id anim laboris nisi occaecat. Sit cillum incididunt labore sit esse mollit. Lorem reprehenderit aliqua. Fugiat dolor sit labore deserunt cupidatat quis non mollit ad cillum voluptate. Lorem esse quis. Anim eu culpa in duis laboris non consectetur excepteur in voluptate ullamco.
-                            </p>
-                            <p>
-                                Duis cillum ipsum qui deserunt esse. Pariatur ad non voluptate nisi consequat cupidatat eu nulla esse. Consectetur laborum aute ad cillum ad. Sunt exercitation in aliquip dolore commodo. Sunt deserunt officia minim ad sint duis cupidatat occaecat anim. Lorem cillum velit nostrud. Exercitation ea labore ea eu minim ex dolor tempor et sit. Veniam pariatur anim magna anim commodo pariatur reprehenderit ea magna incididunt aute eu dolor.
-                            </p>
-                            <p>
-                                Consectetur veniam labore magna excepteur qui. Veniam magna sunt minim elit ea aute minim nisi excepteur ullamco consectetur. Ullamco ex dolore voluptate aliqua nostrud nostrud eiusmod. In nisi officia ex sint dolor proident mollit aute duis ipsum mollit officia aute velit. Eu ea reprehenderit minim amet id consectetur aute.
                             </p>
                             <div class="divider">
                                 <svg viewBox="0 0 23.3 25" fill="currentColor"><path d="M1.72 8.62v.86H0v2.59h.86v-.86h.86v-.87h1.73v.87h-.86v8.62h.86v2.58h-.86v.87h.86V25h.86v-1.72h.86v-.87h-.86v-2.58h.86V11.2h-.86v-.86h1.72v.86h.87v.86h.86V9.48H6.03v-.86h-.86V6.9h.86v-.87h1.73V3.45H6.9v.86h-.87v.86h-.86V1.72h-.86V0h-.86v1.72h-.86v3.45h-.87v-.86H.86v-.86H0v2.58h1.72v.87h.87v1.72zm8.63 9.48h-.87v.87H7.76v2.58h.86v-.86h.86v-.86h.87v3.45h.86V25h.86v-1.72h.86v-3.45h.86v.86h.87v.86h.86v-2.58h-1.73v-.87h-.86v-1.72h.86v-.86h1.73v-2.59h-.86v.86h-.87v.87h-1.72v-.87h.86V5.17h-.86V2.6h.86v-.87h-.86V0h-.86v1.72h-.87v.87h.87v2.58h-.87v8.62h.87v.87H9.48v-.87h-.86v-.86h-.86v2.59h1.72v.86h.87zm6.9-9.48v.86h-1.73v2.59h.86v-.86h.86v-.86h1.73v.86h-.87v8.62h.87v2.58h-.87v.87h.87V25h.86v-1.72h.86v-.87h-.86v-2.58h.86V11.2h-.86v-.86h1.72v.86h.86v.86h.87V9.48h-1.73v-.86h-.86V6.9h.86v-.87h1.73V3.45h-.87v.86h-.86v.86h-.86V1.72h-.86V0h-.86v1.72h-.87v3.45h-.86v-.86h-.86v-.86h-.86v2.58h1.72v.87h.86v1.72z"/></svg>
@@ -167,25 +149,10 @@
                                 In incididunt mollit aute tempor. Fugiat enim pariatur quis minim minim proident ullamco pariatur. Labore duis ut laboris ipsum deserunt. Ipsum ad excepteur ipsum in officia amet occaecat veniam velit eiusmod do tempor adipisicing.
                             </p>
                             <p>
-                                Do eiusmod id pariatur laboris esse incididunt tempor incididunt. Velit et excepteur exercitation incididunt voluptate adipisicing in mollit voluptate id nulla sit anim ipsum. Laborum in esse tempor irure dolore laboris incididunt in voluptate ad consectetur. Nisi anim culpa voluptate sit consectetur id esse laboris cillum excepteur labore officia do. Ex ad aute cupidatat reprehenderit proident voluptate incididunt quis id dolore. Lorem eu aliqua. Incididunt fugiat elit do dolore enim elit exercitation quis in ut culpa ipsum. In mollit quis sint dolore exercitation exercitation officia adipisicing exercitation commodo minim ex dolore officia.
+                                Nisi anim culpa voluptate sit consectetur id esse laboris cillum excepteur labore officia do. Ex ad aute cupidatat reprehenderit proident voluptate incididunt quis id dolore. Lorem eu aliqua. Incididunt fugiat elit do dolore enim elit exercitation quis in ut culpa ipsum. In mollit quis sint dolore exercitation exercitation officia adipisicing exercitation commodo minim ex dolore officia.
                             </p>
                             <p>
                                 Ea ea nisi qui sint est enim minim ea. Sit nisi ut ullamco laboris. Deserunt sit do incididunt sit. Occaecat dolor non consequat nostrud. Labore esse est duis esse nostrud labore magna laborum pariatur ad enim est.
-                            </p>
-                            <p>
-                                Minim veniam sunt excepteur ad est. Tempor anim labore labore nostrud minim sit anim laborum nisi consequat dolore. Voluptate ipsum do ad nisi tempor pariatur. Commodo eu enim irure fugiat. Lorem consectetur nostrud nisi labore cupidatat qui elit cillum. Ullamco occaecat irure est nisi eiusmod id anim laboris. Tempor ipsum ea consequat incididunt exercitation commodo sint. Est cillum dolore ea irure est incididunt voluptate amet.
-                            </p>
-                            <p>
-                                Non ad id enim occaecat non reprehenderit ex sint ut cillum occaecat proident. Aute proident qui velit ex laboris mollit elit est laborum ea voluptate ea. Labore mollit consequat. Lorem excepteur dolore sunt aliquip.
-                            </p>
-                            <p>
-                                Dolor qui veniam fugiat dolor sunt ea nisi pariatur eiusmod sunt labore cupidatat. Qui enim aliquip tempor pariatur laborum veniam do aliquip aliquip incididunt cillum anim. Officia esse sit exercitation ullamco sint sit dolor fugiat cillum. Deserunt reprehenderit laboris et ad. Lorem excepteur consectetur quis pariatur fugiat anim duis magna. Adipisicing proident et irure eiusmod labore laborum aliqua.
-                            </p>
-                            <p>
-                                Dolore quis laborum sunt deserunt anim mollit minim nisi officia eiusmod. Do magna cupidatat nulla aliqua. Cupidatat labore cillum esse non tempor officia ea veniam incididunt in laboris. Deserunt cillum cillum duis elit. In laboris cupidatat consectetur do do adipisicing pariatur quis commodo nisi proident.
-                            </p>
-                            <p>
-                                Eu sint amet ut consectetur mollit sit qui nostrud ad qui. Laboris veniam reprehenderit labore proident excepteur cupidatat deserunt ex qui id pariatur. Mollit ex labore est aute. Nulla laboris do dolor laboris officia est ad voluptate aliqua sunt laboris tempor mollit. Amet ullamco aute ullamco deserunt. Nulla mollit incididunt fugiat dolor ipsum nisi culpa.
                             </p>
                             <hr>
                             <p class="small">
