--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         About
                                     </h2>
                                     <p>
-                                        Hubert Po is the author of the novels <span class="italic">The Cutting Jar</span> and <span class="italic">The Day After Yesterday</span>. He lives in Malmö, Sweden.
+                                        Humbert Po is the author of the novels <span class="italic">The Cutting Jar</span> and <span class="italic">The Day After Yesterday</span>. He lives in Malmö, Sweden.
                                     </p>
                                 </div>
                                 <div>
